# agentstr-demo

./: .env.sample  README.md  pyproject.toml
agent_servers/: agent_api.py  mcp_agent.py  mcp_agent_api.py  nostr_agent_server.py  nostr_server.py
agent_servers/airline/: .env.sample  agent.py
agent_servers/research/: agent.py
agents/agent_finder/: agent.py  known_agents.txt  test.py
agents/agent_router/: agent.py
agents/finance/: agent.py  test.py
agents/medical/: agent.py
agents/news/: agent.py
agents/research/: .env.sample  agent.py
agents/travel/: .env.sample  agent.py
mcp_servers/: basic_math.py  current_datetime.py  exchange_rate.py  math.py
mcp_servers/bitcoin/: server.py  test_client.py
mcp_servers/exchange_rate/: server.py
mcp_servers/nostr_rag/: .env.sample  server.py
mcp_servers/web_search/: server.py
scripts/: run_agent_api.sh  run_agent_bitcoin.sh  run_agent_finance.sh  run_agent_finder.sh  run_agent_listener.sh  run_agent_medical.sh  run_agent_news.sh  run_agent_nostr_rag.sh  run_agent_research.sh  run_agent_travel.sh  run_mcp_agent.sh  run_mcp_agent_api.sh  run_mcp_server_bitcoin.sh  run_mcp_server_datetime.sh  run_mcp_server_exchange_rate.sh  run_mcp_server_math.sh  run_mcp_server_nostr_rag.sh  run_mcp_server_web_search.sh  run_nostr_agent_listener.sh  run_nostr_agent_server.sh  sample_curl.sh
