[project]
name = "nostr-ai"
version = "0.1.0"
description = "Decentralized AI agent using Nostr and MCP"
requires-python = ">=3.11"
dependencies = [
    "agentstr-sdk[all]>=0.2.4",
    "fastapi>=0.115.12",
    "langgraph>=0.4.3",
    "pynostr>=0.6.2",
    "uvicorn>=0.34.2",
    "nostr-langchain-mcp>=0.0.3",
    "langchain-sandbox>=0.0.6",
    "tavily-python>=0.7.3",
    "langchain-openai>=0.3.18",
    "dspy>=2.6.24",
    "pydantic>=2.11.4",
]

[tool.uv]
reinstall-package = ["nostr-langchain-mcp", "agentstr-sdk"]

[tool.uv.sources]
agentstr-sdk = { path = "/Users/ehallmark/repos/nostr-agent-tools/" }
nostr-langchain-mcp = { path = "/Users/ehallmark/repos/langchain-mcp-adapters/" }
