[project]
name = "agentstr-demo"
version = "0.1.0"
description = "Decentralized AI agents on Nostr using Agentstr SDK"
requires-python = ">=3.11"
dependencies = [
    "agentstr-sdk[all]>=0.3.8",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "tavily-python>=0.7.3",
    "pydantic>=2.11.4",
    "openbb>=4.1.3",
    "aiohttp>=3.12.9",
]

[tool.uv]
reinstall-package = ["agentstr-sdk"]

[tool.uv.sources]
agentstr-sdk = { path = "/Users/ehallmark/repos/nostr-agent-tools/" }
